# newrelic-dotnet-agent

./: .editorconfig  .gitattributes  .gitignore  .lycheeignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  FullAgent.sln  NR-323920-plan.md  PROFILER_DUAL_BUILD_ALPINE_ADDENDUM.md  PROFILER_DUAL_BUILD_DESIGN.md  PROFILER_LINUX_UNIT_TESTS_ANALYSIS.md  PROFILER_MODERNIZATION_PLAN.md  PROFILER_MUSL_SPIKE_REPORT.md  README.md  ROADMAP.md  Spike_Core_Tracing.md  THIRD_PARTY_NOTICES.md  claude.md  codecov.yml  dotnet_preconnect_compliance_analysis.md  nuget.config  otel_spec_compliance_analysis.md  release-please-config.json  test.runsettings  testfile.md
experiments/rust-profiler-poc/: .gitignore  Cargo.toml  Dockerfile.linux-test  README.md  build.rs
experiments/rust-profiler-poc/.cargo/: config.toml
experiments/rust-profiler-poc/build_targets/: build-all-targets.ps1
experiments/rust-profiler-poc/docker/: alpine-arm64-builder.dockerfile  alpine-builder.dockerfile  alpine-static-builder.dockerfile  build-all-docker.ps1  build-alpine-arm64.sh  build-alpine-static.sh  build-alpine.sh  build-cross-musl.sh  build-musl-comprehensive.sh  build-ubuntu.sh  cross-musl-builder.dockerfile  musl-dev-builder.dockerfile  ubuntu-builder.dockerfile
experiments/rust-profiler-poc/docs/: MUSL_COMPILATION_BREAKTHROUGH.md  agent-bootstrap-plan.md  cpp-analysis-and-porting-strategy.md  il-injection-plan.md  logging-requirements.md  poc-progress.md  valuetask-investigation.md
experiments/rust-profiler-poc/src/: ffi.rs  function_control.rs  instrumentation.rs  interfaces.rs  lib.rs  metadata_assembly.rs  metadata_emit.rs  metadata_import.rs  method_resolver.rs  method_signature.rs  process_filter.rs  profiler_callback.rs  profiler_info.rs  tokenizer.rs  validation.rs
experiments/rust-profiler-poc/src/il/: exception_handler.rs  inject_default.rs  instruction_builder.rs  instruction_scanner.rs  locals.rs  method_header.rs  mod.rs  opcodes.rs  sig_compression.rs
experiments/rust-profiler-poc/test-app/: run-with-cpp-profiler.ps1  run-with-profiler.ps1  run-with-profiler.sh
experiments/rust-profiler-poc/test-app/ProfilerTestApp/: Program.cs
experiments/rust-profiler-poc/test-app/cpp-profiler-home/: newrelic.config
experiments/rust-profiler-poc/test-app/cpp-profiler-home/extensions/: ProfilerTestApp.xml
experiments/rust-profiler-poc/tests/: basic_integration_test.rs  com_exports_test.rs  ffi_constants_test.rs  interface_guids_test.rs  process_filter_test.rs  validation_test.rs
src/Agent/NewRelic/Profiler/: .gitattributes  .gitignore  CMakeLists.txt  Directory.Build.props  InstrumentationEngine.h  Linux.md  Makefile  NewRelic.Profiler.sln  NewRelic.Profiler.sln.DotSettings  README.md  docker-compose.yml
src/Agent/NewRelic/Profiler/Common/: AssemblyVersion.h  Common.vcxproj  Common.vcxproj.filters  CorStandIn.h  FileUtils.h  Macros.h  OnDestruction.h  Strings.h  xplat.h
src/Agent/NewRelic/Profiler/CommonTest/: CommonTest.vcxproj  CommonTest.vcxproj.filters  FileUtilsTest.cpp  StringsTest.cpp  TestModuleAttributes.cpp  VersionTest.cpp  stdafx.cpp  stdafx.h  targetver.h
src/Agent/NewRelic/Profiler/Configuration/: AgentConfig.cpp  Configuration.h  Configuration.vcxproj  Exceptions.h  IgnoreInstrumentation.h  InstrumentationConfiguration.h  InstrumentationPoint.h  Strings.h  TracerFlags.h  stdafx.h
src/Agent/NewRelic/Profiler/ConfigurationTest/: ConfigOverrideTest.cpp  ConfigurationTest.cpp  ConfigurationTest.vcxproj  ConfigurationTestTemplates.h  IgnoreInstrumentationTest.cpp  InstrumentationConfigurationTest.cpp  InstrumentationPointTest.cpp  MockSystemCalls.h  ShouldInstrumentTest.cpp  StringsTest.cpp  stdafx.h
src/Agent/NewRelic/Profiler/ContinuousProfiler/: ContinuousProfiler.h  SampleBufferWriter.h  SuspendMutex.h  TraceContextMap.h
src/Agent/NewRelic/Profiler/Logging/: DefaultFileLogLocation.h  Exceptions.h  Logger.h  Logging.vcxproj  stdafx.h
src/Agent/NewRelic/Profiler/LoggingTest/: DefaultFileLogLocationTest.cpp  LoggerTest.cpp  LoggingTest.vcxproj  LoggingTest.vcxproj.filters  LoggingTestTemplates.h  TestModuleAttributes.cpp  UnreferencedFunctions.h  stdafx.cpp  stdafx.h
(+6647 files in other folders)
