[package]
name = "newrelic-profiler-poc"
version = "0.1.0"
edition = "2021"
description = "New Relic .NET Agent Profiler - Rust POC"
authors = ["New Relic, Inc."]

[lib]
name = "newrelic_profiler_poc"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cross-platform dependencies
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# COM support (cross-platform - works on Windows and Linux)
com = { version = "0.6.0", features = ["production"] }
bitflags = "1.3"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

# Build profiles
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"  # COM doesn't handle Rust panics well
